for idaholab/Malcolm#64, migrating ECS unit into individual parsing sections for log types

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -1,9 +1,5 @@
 filter {
 
-  # todo: make added fields not zeek-specific? (see ECS topic branch)
-  # all the lookups are done here, but some of them are still zeek-specific which
-  # IMO isn't the cleanest. could be refactored/split.
-
   ######## MAC address OUI (manufacturer) lookup #################################################
 
   # if OUI lookup is requested, enable it
@@ -402,25 +398,25 @@ filter {
 
   } # end if radius
 
-  if ([zeek_ssl][server_name]) {
+  if ([tls][client][server_name]) {
     mutate {
       add_field => { "[@metadata][ENV_FREQ_LOOKUP]" => "${FREQ_LOOKUP:false}" }
     }
     if ([@metadata][ENV_FREQ_LOOKUP] == "true") {
-      # if requested, look up zeek_ssl.server_name queries using freq_server.py to get entropy scores
+      # if requested, look up [tls][client][server_name] queries using freq_server.py to get entropy scores
       http {
         id => "rest_ssl_server_name_freq_lookup"
-        url => "http://freq:10004/measure/%{[zeek_ssl][server_name]}"
-        target_body => "[@metadata][zeek_ssl_server_name_freq]"
+        url => "http://freq:10004/measure/%{[tls][client][server_name]}"
+        target_body => "[@metadata][tls_server_name_freq]"
       }
-      if ([@metadata][zeek_ssl_server_name_freq]) {
+      if ([@metadata][tls_server_name_freq]) {
         grok {
-          id => "grok_zeek_ssl_server_name_freq_parse"
-          match => { "[@metadata][zeek_ssl_server_name_freq]" => [ "^\(%{NUMBER:[event][freq_score_v1]}, %{NUMBER:[event][freq_score_v2]}\)$" ] }
+          id => "grok_tls_server_name_freq_parse"
+          match => { "[@metadata][tls_server_name_freq]" => [ "^\(%{NUMBER:[event][freq_score_v1]}, %{NUMBER:[event][freq_score_v2]}\)$" ] }
         }
       }
     }
-  } # end if zeek_ssl.server_name
+  } # end if tls.client.server_name
 
   ################################################################################################
 
