--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -3,24 +3,12 @@
 filter {
 
   # Map enriched fields to ECS where possible (see https://github.com/idaholab/Malcolm/issues/16)
-  # For now I will add fields rather than rename them. This will preserve backwards compatibility
-  # but the records will be somewhat bigger. I'll have to address what (if anything) to do with upgrades.
 
-# 🗹 Client - Fields about the client side of a network connection, used with server. - https://www.elastic.co/guide/en/ecs/current/ecs-client.html
-# client.domain
-      if ([source][hostname]) {            mutate { id => "mutate_add_field_ecs_client_domain_source_hostname"
-                                                       add_field => { "[client][domain]" => "%{[source][hostname]}" } } }
-
-# 🗹 Server - Fields about the server side of a network connection, used with client. - https://www.elastic.co/guide/en/ecs/current/ecs-server.html
-# as Arkime uses source/destination for network stuff (vs. client/server) we're doing that as well for zeek logs
-
-# server.domain
-      if ([destination][hostname]) {            mutate { id => "mutate_add_field_ecs_server_domain_destination_hostname"
-                                                       add_field => { "[server][domain]" => "%{[destination][hostname]}" } } }
-
-
-  # 🗹 Network - Fields describing the communication path over which the event happened. - https://www.elastic.co/guide/en/ecs/current/ecs-network.html
-
+  # hostnames
+  if ([source][hostname]) {            mutate { id => "mutate_add_field_ecs_client_domain_source_hostname"
+                                                   add_field => { "[client][domain]" => "%{[source][hostname]}" } } }
+  if ([destination][hostname]) {            mutate { id => "mutate_add_field_ecs_server_domain_destination_hostname"
+                                                   add_field => { "[server][domain]" => "%{[destination][hostname]}" } } }
   # network.direction (from tags assigned during 11_lookups.conf)
   if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
     mutate { id => "mutate_add_field_metadata_network_direction_internal"
@@ -46,15 +34,16 @@ filter {
   if ([source][segment]) { mutate { id => "mutate_add_field_ecs_network_name_orig"
                                     merge => { "[network][name]" => "[source][segment]" } } }
 
-  # Autonomous System and Geo are handled after enrichment in 20_enriched_to_ecs.conf
-  # ☐ Autonomous System - Fields describing an Autonomous System (Internet routing prefix). - https://www.elastic.co/guide/en/ecs/current/ecs-as.html
-  # ☐ Geo - Fields describing a location. - https://www.elastic.co/guide/en/ecs/current/ecs-geo.html
 
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
-  if ([destination][geo][ip]) {                mutate { id => "mutate_merge_field_related_ip_zeek_destination_geo_ip"
-                                                        merge => { "[related][ip]" => "[destination][geo][ip]" } } }
-  if ([source][geo][ip]) {                     mutate { id => "mutate_merge_field_related_ip_zeek_source_geo_ip"
-                                                        merge => { "[related][ip]" => "[source][geo][ip]" } } }
+  if ([source][ip]) {               mutate { id => "mutate_merge_field_related_ip_source_ip"
+                                             merge => { "[related][ip]" => "[source][ip]" } } }
+  if ([destination][ip]) {          mutate { id => "mutate_merge_field_related_ip_destination_ip"
+                                             merge => { "[related][ip]" => "[destination][ip]" } } }
+  if ([destination][geo][ip]) {     mutate { id => "mutate_merge_field_related_ip_destination_geo_ip"
+                                             merge => { "[related][ip]" => "[destination][geo][ip]" } } }
+  if ([source][geo][ip]) {          mutate { id => "mutate_merge_field_related_ip_source_geo_ip"
+                                             merge => { "[related][ip]" => "[source][geo][ip]" } } }
   if ([related][ip]) {
     ruby {
       id => "ruby_related_ip_uniq"
