--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3844,42 +3844,25 @@ filter {
     rename => { "[zeek_%{[log_source]}][ts]"              => "[zeek][ts]" }
     rename => { "[zeek_%{[log_source]}][uid]"             => "[zeek][uid]" }
     rename => { "[zeek_%{[log_source]}][fuid]"            => "[zeek][fuid]" }
-    rename => { "[zeek_%{[log_source]}][orig_h]"          => "[zeek][orig_h]" }
-    rename => { "[zeek_%{[log_source]}][orig_p]"          => "[zeek][orig_p]" }
-    rename => { "[zeek_%{[log_source]}][orig_l2_addr]"    => "[zeek][orig_l2_addr]" }
-    rename => { "[zeek_%{[log_source]}][resp_h]"          => "[zeek][resp_h]" }
-    rename => { "[zeek_%{[log_source]}][resp_p]"          => "[zeek][resp_p]" }
-    rename => { "[zeek_%{[log_source]}][resp_l2_addr]"    => "[zeek][resp_l2_addr]" }
-    rename => { "[zeek_%{[log_source]}][proto]"           => "[zeek][proto]" }
-    rename => { "[zeek_%{[log_source]}][service]"         => "[zeek][service]" }
+    rename => { "[zeek_%{[log_source]}][orig_h]"          => "[source][ip]" }
+    rename => { "[zeek_%{[log_source]}][orig_p]"          => "[source][port]" }
+    rename => { "[zeek_%{[log_source]}][orig_l2_addr]"    => "[source][mac]" }
+    rename => { "[zeek_%{[log_source]}][resp_h]"          => "[destination][ip]" }
+    rename => { "[zeek_%{[log_source]}][resp_p]"          => "[destination][port]" }
+    rename => { "[zeek_%{[log_source]}][resp_l2_addr]"    => "[destination][mac]" }
+    rename => { "[zeek_%{[log_source]}][proto]"           => "[network][transport]" }
+    rename => { "[zeek_%{[log_source]}][service]"         => "[network][protocol]" }
     rename => { "[zeek_%{[log_source]}][user]"            => "[related][user]" }
     rename => { "[zeek_%{[log_source]}][password]"        => "[related][password]" }
-    rename => { "[zeek_%{[log_source]}][community_id]"    => "[zeek][community_id]" }
+    rename => { "[zeek_%{[log_source]}][community_id]"    => "[network][community_id]" }
   }
 
-  if ([zeek][orig_h]) { mutate { id => "mutate_add_field_zeek_srcIp"
-                                 add_field => { "[source][ip]"   => "%{[zeek][orig_h]}" } } }
-  if ([zeek][orig_p]) { mutate { id => "mutate_add_field_zeek_srcPort"
-                                 add_field => { "[source][port]" => "%{[zeek][orig_p]}" } } }
-  if ([zeek][resp_h]) { mutate { id => "mutate_add_field_zeek_dstIp"
-                                 add_field => { "[destination][ip]"   => "%{[zeek][resp_h]}" } } }
-  if ([zeek][resp_p]) { mutate { id => "mutate_add_field_zeek_dstPort"
-                                 add_field => { "[destination][port]" => "%{[zeek][resp_p]}" } } }
-  if ([zeek][community_id]) { mutate { id => "mutate_add_field_zeek_communityId"
-                                       add_field => { "[network][community_id]" => "%{[zeek][community_id]}" } } }
-
-  if ([zeek][orig_l2_addr]) {
-    # copy orig_l2_addr into source.mac array (with a count of 1)
-    mutate { id => "mutate_merge_field_zeek_srcMac"
-             merge => { "[source][mac]" => "[zeek][orig_l2_addr]" } }
+  if ([source][mac]) {
     mutate { id => "mutate_add_field_zeek_srcMacCnt"
              add_field => { "[source][mac-cnt]" => "1" } }
   }
 
-  if ([zeek][resp_l2_addr]) {
-    # copy resp_l2_addr into destination.mac array (with a count of 1)
-    mutate { id => "mutate_merge_field_zeek_dstMac"
-             merge => { "[destination][mac]" => "[zeek][resp_l2_addr]" } }
+  if ([destination][mac]) {
     mutate { id => "mutate_add_field_zeek_dstMacCnt"
              add_field => { "[destination][mac-cnt]" => "1" } }
   }
@@ -3993,21 +3976,17 @@ filter {
     mutate { id => "mutate_merge_zeek_user"
              merge => { "[user]" => "[related][user]" } }
   }
-  if ([zeek][proto]) {
+  if ([network][transport]) {
     translate {
       id => "translate_zeek_proto"
-      field => "[zeek][proto]"
+      field => "[network][transport]"
       destination => "[ipProtocol]"
       dictionary_path => "/etc/ip_protocol_numbers.yaml"
     }
     mutate { id => "mutate_split_zeek_proto"
-             split => { "[zeek][proto]" => "," } }
+             split => { "[network][transport]" => "," } }
     mutate { id => "mutate_merge_zeek_proto"
-             merge => { "[protocol]" => "[zeek][proto]" } }
-
-    # ECS - zeek.proto -> network.transport
-    mutate { id => "mutate_add_field_ecs_network_iana_number"
-             add_field => { "[network][transport]" => "%{[zeek][proto]}" } }
+             merge => { "[protocol]" => "[network][transport]" } }
 
     if ([ipProtocol]) {
       # ECS - ipProtocol -> network.iana_number
@@ -4015,25 +3994,24 @@ filter {
                add_field => { "[network][iana_number]" => "%{[ipProtocol]}" } }
     }
   }
-  if ([zeek][service]) {
+  if ([network][protocol]) {
     mutate { id => "mutate_split_zeek_service"
-             split => { "[zeek][service]" => "," } }
+             split => { "[network][protocol]" => "," } }
     ruby {
-      id => "ruby_zeek_service_uniq"
+      id => "ruby_zeek_network_protocol_uniq"
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
-        "field" => "[zeek][service]"
+        "field" => "[network][protocol]"
       }
     }
     mutate { id => "mutate_merge_zeek_service"
-             merge => { "[protocol]" => "[zeek][service]" } }
+             merge => { "[protocol]" => "[network][protocol]" } }
 
-    # ECS - zeek.service -> network.application, network.protocol
-    if ([zeek][service]) {
+    # ECS - network.protocol -> network.application
+    # TODO: what's the difference? https://www.elastic.co/guide/en/ecs/current/ecs-network.html
+    if ([network][protocol]) {
       mutate { id => "mutate_add_field_ecs_network_application"
-               add_field => { "[network][application]" => "%{[zeek][service]}" } }
-      mutate { id => "mutate_add_field_ecs_network_protocol"
-               add_field => { "[network][protocol]" => "%{[zeek][service]}" } }
+               add_field => { "[network][application]" => "%{[network][protocol]}" } }
     }
   }
 
@@ -4097,19 +4075,19 @@ filter {
     }
 
     # tag ICS services from conn.log
-    if (("bacnet" in [zeek][service]) or
-        ("bsap" in [zeek][service]) or
-        ("cip" in [zeek][service]) or
-        ("cotp" in [zeek][service]) or
-        ("dnp3" in [zeek][service]) or
-        ("ecat" in [zeek][service]) or
-        ("enip" in [zeek][service]) or
-        ("ethercat" in [zeek][service]) or
-        ("iso_cotp" in [zeek][service]) or
-        ("modbus" in [zeek][service]) or
-        ("profinet" in [zeek][service]) or
-        ("profinet_dce_rpc" in [zeek][service]) or
-        ("s7comm" in [zeek][service])) {
+    if (("bacnet" in [network][protocol]) or
+        ("bsap" in [network][protocol]) or
+        ("cip" in [network][protocol]) or
+        ("cotp" in [network][protocol]) or
+        ("dnp3" in [network][protocol]) or
+        ("ecat" in [network][protocol]) or
+        ("enip" in [network][protocol]) or
+        ("ethercat" in [network][protocol]) or
+        ("iso_cotp" in [network][protocol]) or
+        ("modbus" in [network][protocol]) or
+        ("profinet" in [network][protocol]) or
+        ("profinet_dce_rpc" in [network][protocol]) or
+        ("s7comm" in [network][protocol])) {
       mutate { id => "mutate_add_tag_ics_conn_log"
                add_tag => [ "ics" ] }
     }
@@ -4169,13 +4147,13 @@ filter {
     #############################################################################################################################
     # dhcp.log specific logic
 
-    if ([zeek][orig_l2_addr]) {
+    if ([source][mac]) {
       mutate {
         id => "mutate_add_fields_zeek_dhcp_mac"
-        add_field =>  { "[zeek_dhcp][mac]" => "%{[zeek][orig_l2_addr]}" }
+        add_field =>  { "[zeek_dhcp][mac]" => "%{[source][mac]}" }
       }
       mutate { id => "mutate_merge_zeek_dhcp_mac"
-               merge => { "[dhcp][mac]" => "[zeek][orig_l2_addr]" } }
+               merge => { "[dhcp][mac]" => "[source][mac]" } }
       mutate { id => "mutate_add_field_dhcp_macCnt"
                add_field => { "[dhcp][macCnt]" => "1" } }
     }
@@ -4428,10 +4406,6 @@ filter {
       }
     }
 
-    # ECS -> zeek_files.mime_type -> file.mime_type
-    if ([zeek_files][mime_type]) {    mutate { id => "mutate_add_field_ecs_files_mime_type"
-                                      add_field => { "[file][mime_type]" => "%{[zeek_files][mime_type]}" } } }
-
     # ECS -> zeek_files.total_bytes -> file.size
     if ([zeek_files][total_bytes]) {  mutate { id => "mutate_add_field_ecs_files_size"
                                       add_field => { "[file][size]" => "%{[zeek_files][total_bytes]}" } } }
@@ -4635,7 +4609,7 @@ filter {
           user = event.get('[related][user]')
           password = event.get('[related][password]')
           host = event.get('[zeek_http][host]')
-          port = event.get('[zeek][resp_p]')
+          port = event.get('[destination][port]')
           uri = event.get('[zeek_http][uri]')
           ext = (uri.nil? || !(uri.include? '/')) ? nil : File.extname(uri).partition('.').last.split(/[\?#]/)[0]
           fragment = uri.nil? ? nil : uri.partition('#').last
@@ -4928,16 +4902,12 @@ filter {
           id => "grok_zeek_notice_attack_src_hosts"
           match => { "[zeek_notice][msg]" => [ "from%{SPACE}host%{SPACE}%{DATA:[source][ip]}%{SPACE}($|[^\d:\.\w-]+)" ] }
         }
-        if ([source][ip]) { mutate { id => "mutate_add_field_zeek_orig_h_attack"
-                                add_field => { "[zeek][orig_h]"   => "%{[source][ip]}" } } }
       }
       if (![destination][ip]) {
         grok {
           id => "grok_zeek_notice_attack_dst_hosts"
           match => { "[zeek_notice][msg]" => [ "(against|to)%{SPACE}host%{SPACE}%{DATA:[destination][ip]}%{SPACE}($|[^\d:\.\w-]+)" ] }
         }
-        if ([destination][ip]) { mutate { id => "mutate_add_field_zeek_resp_h_attack"
-                                add_field => { "[zeek][resp_h]"   => "%{[destination][ip]}" } } }
       }
     }
 
@@ -5125,9 +5095,9 @@ filter {
                merge => { "[radius][mac]" => "[zeek_radius][mac]" } }
       mutate { id => "mutate_add_field_radius_macCnt"
                add_field => { "[radius][macCnt]" => "1" } }
-      if (![zeek][orig_l2_addr]) {
+      if (![source][mac]) {
         mutate { id => "mutate_merge_zeek_radius_zeek_mac"
-                 merge => { "[zeek][orig_l2_addr]" => "[zeek_radius][mac]" } }
+                 merge => { "[source][mac]" => "[zeek_radius][mac]" } }
       }
     }
 
@@ -5924,19 +5894,19 @@ filter {
   } # end if/else if/else for specific log type logic
   #######################################################################################################
 
-  # rename log_source (eg., conn, ssh, etc.) to zeek.logType
+  # rename log_source (eg., conn, ssh, etc.) to event.dataset
   mutate { id => "mutate_rename_zeek_logType"
-           rename => { "[log_source]" => "[zeek][logType]" } }
+           rename => { "[log_source]" => "[event][dataset]" } }
 
   # kind of a unique case, smb_cmd can also be smb_files
   if ([zeek_smb_files]) {
 
-    if ([zeek][logType] == "smb_cmd") {
+    if ([event][dataset] == "smb_cmd") {
       # seriously I do not get how merge works, why can't I just merge the string literal?
       mutate { id => "mutate_add_field_zeek_tmp_logtype"
                add_field => { "[@metadata][tmpLogType]" => "smb_files" } }
       mutate { id => "mutate_merge_zeek_smb_cmd_and_smb_files_logType"
-               merge => { "[zeek][logType]" => "[@metadata][tmpLogType]" } }
+               merge => { "[event][dataset]" => "[@metadata][tmpLogType]" } }
     }
 
     # ECS - zeek_smb_files.times_created -> file.created
@@ -5972,11 +5942,11 @@ filter {
              add_field => { "[file][directory]" => "%{[@metadata][smb_path]}" } }
   }
 
-  # ECS - zeek.logType -> event.dataset
+  # ECS - event.dataset -> event.dataset
   mutate { id => "mutate_add_field_ecs_event_dataset"
-           add_field => { "[event][dataset]" => "zeek.%{[zeek][logType]}" } }
+           add_field => { "[event][dataset]" => "zeek.%{[event][dataset]}" } }
 
-  # ECS - event.kind based on zeek.logType (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
+  # ECS - event.kind based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
   if ([zeek_notice]) or ([zeek_signatures]) or ([zeek_weird]) {
     mutate { id => "mutate_add_field_ecs_event_kind_alert"
              add_field => { "[event][kind]" => "alert" } }
@@ -5985,10 +5955,10 @@ filter {
              add_field => { "[event][kind]" => "event" } }
   }
 
-  # ECS - event.category based on zeek.logType (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
+  # ECS - event.category based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
   translate {
     id => "translate_zeek_ecs_event_category"
-    field => "[zeek][logType]"
+    field => "[event][dataset]"
     destination => "[event][category]"
     dictionary_path => "/etc/zeek_log_ecs_categories.yaml"
   }
