--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1,40 +1,40 @@
 filter {
 
   # Protocol/service version ##########################################################################################
-  # collect protocol version under the parent zeek.service_version array
+  # collect protocol version under the parent network.protocol_version array
 
   if ([zeek_gquic][version])                    { mutate { id => "mutate_merge_normalize_zeek_gquic_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_gquic][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_gquic][version]" } } }
 
   if ([zeek_http][version])                     { mutate { id => "mutate_merge_normalize_zeek_http_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_http][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_http][version]" } } }
 
   if ([zeek_ipsec]) {
     ruby {
-      id => "ruby_zeek_field_zeek_service_version_ipsec"
+      id => "ruby_zeek_field_network_protocol_version_ipsec"
       code => "
         versions = Array.new
         versions << [event.get('[zeek_ipsec][maj_ver]'),
                      event.get('[zeek_ipsec][min_ver]')].compact.join('.')
-        event.set('[zeek][service_version]', versions)"
+        event.set('[network][protocol_version]', versions)"
     }
   }
 
   if ([zeek_ldap][version])                      { mutate { id => "mutate_merge_normalize_zeek_ldap_version"
-                                                            merge => { "[zeek][service_version]" => "[zeek_ldap][version]" } } }
+                                                            merge => { "[network][protocol_version]" => "[zeek_ldap][version]" } } }
 
   if ([zeek_ntp][version])                      { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_ntp][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_ntp][version]" } } }
 
   if ([zeek_profinet][block_version])           { mutate { id => "mutate_merge_normalize_zeek_profinet_block_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_profinet][block_version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_profinet][block_version]" } } }
 
   if ([zeek_profinet_dce_rpc][version])         { mutate { id => "mutate_merge_normalize_zeek_profinet_dce_rpc_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_profinet_dce_rpc][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_profinet_dce_rpc][version]" } } }
 
   if ([zeek_rfb]) {
     ruby {
-      id => "ruby_zeek_field_zeek_service_version_rfb"
+      id => "ruby_zeek_field_network_protocol_version_rfb"
       code => '
         versions = Array.new
         clientMajorVersion = event.get("[zeek_rfb][client_major_version]").sub!(/^0*/, "")
@@ -47,37 +47,37 @@ filter {
         if serverMajorVersion then
           versions << [serverMajorVersion, serverMinorVersion].join(".")
         end
-        event.set("[zeek][service_version]", versions.uniq)'
+        event.set("[network][protocol_version]", versions.uniq)'
     }
   }
 
   if ([zeek_rdp][client_build])                 { mutate { id => "mutate_merge_normalize_zeek_rdp_client_build"
-                                                           merge => { "[zeek][service_version]" => "[zeek_rdp][client_build]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_rdp][client_build]" } } }
 
   if ([zeek_smtp][version])                      { mutate { id => "mutate_merge_normalize_zeek_smtp_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_smtp][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_smtp][version]" } } }
 
   if ([zeek_smb_cmd][version])                  { mutate { id => "mutate_merge_normalize_zeek_smb_cmd_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_smb_cmd][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_smb_cmd][version]" } } }
 
   if ([zeek_snmp][version])                     { mutate { id => "mutate_merge_normalize_zeek_snmp_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_snmp][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_snmp][version]" } } }
 
   if ([zeek_socks][version])                    { mutate { id => "mutate_merge_normalize_zeek_socks_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_socks][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_socks][version]" } } }
 
   if ([zeek_ssh][version])                      { mutate { id => "mutate_merge_normalize_zeek_ssh_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_ssh][version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_ssh][version]" } } }
 
   if ([zeek_ssl][ssl_version])                  { mutate { id => "mutate_merge_normalize_zeek_ssl_ssl_version"
-                                                           merge => { "[zeek][service_version]" => "[zeek_ssl][ssl_version]" } } }
+                                                           merge => { "[network][protocol_version]" => "[zeek_ssl][ssl_version]" } } }
 
-  if ([zeek][service_version]) {
+  if ([network][protocol_version]) {
     ruby {
-      id => "ruby_zeek_service_version_uniq"
+      id => "ruby_network_protocol_version_uniq"
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
-        "field" => "[zeek][service_version]"
+        "field" => "[network][protocol_version]"
       }
     }
   }
@@ -960,38 +960,39 @@ filter {
   }
 
   # File/MIME types ###################################################################################################
-  # collect all file/MIME types under the parent [zeek][filetype] array
+  # ECS -> various -> file.mime_type
+  # collect all file/MIME types under the parent [file][mime_type] array
 
   if ([zeek_files][mime_type])                  { mutate { id => "mutate_merge_normalize_zeek_files_mime_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_files][mime_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_files][mime_type]" } } }
 
   if ([zeek_ftp][mime_type])                    { mutate { id => "mutate_merge_normalize_zeek_ftp_mime_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_ftp][mime_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_ftp][mime_type]" } } }
 
   if ([zeek_http][orig_mime_types])             { mutate { id => "mutate_merge_normalize_zeek_http_orig_mime_types"
-                                                           merge => { "[zeek][filetype]" => "[zeek_http][orig_mime_types]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_http][orig_mime_types]" } } }
 
   if ([zeek_http][resp_mime_types])             { mutate { id => "mutate_merge_normalize_zeek_http_resp_mime_types"
-                                                           merge => { "[zeek][filetype]" => "[zeek_http][resp_mime_types]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_http][resp_mime_types]" } } }
 
   if ([zeek_irc][dcc_mime_type])                { mutate { id => "mutate_merge_normalize_zeek_irc_dcc_mime_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_irc][dcc_mime_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_irc][dcc_mime_type]" } } }
 
   if ([zeek_intel][file_mime_type])             { mutate { id => "mutate_merge_normalize_zeek_intel_file_mime_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_intel][file_mime_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_intel][file_mime_type]" } } }
 
   if ([zeek_notice][file_mime_type])            { mutate { id => "mutate_merge_normalize_zeek_notice_file_mime_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_notice][file_mime_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_notice][file_mime_type]" } } }
 
   if ([zeek_sip][content_type])                 { mutate { id => "mutate_merge_normalize_zeek_sip_content_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_sip][content_type]" } } }
+                                                           merge => { "[file][mime_type]" => "[zeek_sip][content_type]" } } }
 
-  if ([zeek][filetype]) {
+  if ([file][mime_type]) {
     ruby {
-      id => "ruby_zeek_filetype_uniq"
+      id => "ruby_file_mime_type_uniq"
       path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
       script_params => {
-        "field" => "[zeek][filetype]"
+        "field" => "[file][mime_type]"
       }
     }
   }
@@ -1092,10 +1093,6 @@ filter {
 
   # IP addresses ######################################################################################################
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
-  if ([zeek][orig_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_orig_h"
-                                                        merge => { "[related][ip]" => "[zeek][orig_h]" } } }
-  if ([zeek][resp_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_resp_h"
-                                                       merge => { "[related][ip]" => "[zeek][resp_h]" } } }
   if ([zeek_dhcp][assigned_ip]) {              mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_assigned_ip"
                                                         merge => { "[related][ip]" => "[zeek_dhcp][assigned_ip]" } } }
   if ([zeek_dhcp][requested_ip]) {             mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_requested_ip"
